Fixed some layout issues, also optimised nugget display for dug blocks.

--- a/gold_digger_project/static/css/custom.css
+++ b/gold_digger_project/static/css/custom.css
@@ -609,7 +609,7 @@ a:hover {
 }
 
 #homewell {
-
+    margin-right: 5%;
     border-color: #000000;
     border-width: 2px;
     background-color: rgba(245, 222, 179, 0.46);
@@ -823,37 +823,42 @@ a:hover {
 }
 
 .nuggets_0 {
- 	background: url(/media/mine/main_nuggets_6pixel.png) no-repeat center;
+    background: url(/media/mine/main_nuggets_0pixel.png) no-repeat center;
  	background-size: 100% 100%;
 }
 
 .nuggets_1 {
- 	background: url(/media/mine/main_nuggets_6pixel.png) no-repeat center;
+ 	background: url(/media/mine/main_nuggets_1pixel.png) no-repeat center;
  	background-size: 100% 100%;
 }
 
 .nuggets_2 {
- 	background: url(/media/mine/main_nuggets_5pixel.png) no-repeat center;
- 	background-size: 100% 100%;
-}
-
-.nuggets_3 {
- 	background: url(/media/mine/main_nuggets_4pixel.png) no-repeat center;
- 	background-size: 100% 100%;
-}
-
-.nuggets_4 {
- 	background: url(/media/mine/main_nuggets_3pixel.png) no-repeat center;
- 	background-size: 100% 100%;
-}
-
-.nuggets_5 {
  	background: url(/media/mine/main_nuggets_2pixel.png) no-repeat center;
  	background-size: 100% 100%;
 }
 
+.nuggets_3 {
+ 	background: url(/media/mine/main_nuggets_3pixel.png) no-repeat center;
+ 	background-size: 100% 100%;
+}
+
+.nuggets_4 {
+ 	background: url(/media/mine/main_nuggets_4pixel.png) no-repeat center;
+ 	background-size: 100% 100%;
+}
+
+.nuggets_5 {
+ 	background: url(/media/mine/main_nuggets_5pixel.png) no-repeat center;
+ 	background-size: 100% 100%;
+}
+
 .nuggets_6 {
- 	background: url(/media/mine/main_nuggets_1pixel.png) no-repeat center;
+ 	background: url(/media/mine/main_nuggets_6pixel.png) no-repeat center;
+ 	background-size: 100% 100%;
+}
+
+.nuggets_7 {
+ 	background: url(/media/mine/main_nuggets_6pixel.png) no-repeat center;
  	background-size: 100% 100%;
 }
 
